# RedShark

./: .gitignore  README.md  blueprint-compiler-type-cast-support-in-bind-calls.diff  meson.build
data/: meson.build  xyz.jptrzy.Redshark.desktop.in
res/: gresources.xml  meson.build
res/styles/: AppWindow.css
res/ui/: AboutWindow.blp  AppWindow.blp  SettingsWindow.blp  VideosList.blp  VideosListEntry.blp
src/: AboutWindow.vala  App.vala  AppWindow.vala  Config.vala  SettingsWindow.vala  meson.build
src/net/: Fetch.vala  Response.vala
src/widgets/: VideosList.vala
